# alumnx-vector-db

./: .env.example  .gitignore  Dockerfile  check_mysql.py  config.yaml  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  test_pipeline.py  verification_report.txt
.claude/agents/: api-tester.md  db-analyst.md  test-writer.md  vector-inspector.md
.claude/commands/: health.md  ingest.md  new-router.md  retrieve.md  run-tests.md
.claude/skills/: add-router.md  add-service.md  debug-ingestion.md  debug-retrieval.md
.github/workflows/: deploy.yml
app/: config.py  errors.py  main.py  models.py
app/routers/: documents.py  ingest.py  ingest_file.py  knowledgebases.py  retrieve.py
app/services/: ingest_file_service.py  ingestion.py  retrieval_service.py
app/services/embedding/: embedder.py
app/services/store/: __init__.py  faiss_store.py  flat_file_store.py  mysql_store.py  pg_vector_store.py
schema/: mysql_schema.sql  postgres_schema.sql
tests/: conftest.py  test_api.py
